engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/detail.less
/* ... */
/** Product review form */
.content--product-reviews {
	.alert {
		.unitize-margin(0, 0, 16, 0, 16);
	}
	.captcha--notice {
		.unitize(12, 16, font-size);
		line-height: 1.2;
	}
}

.product--rating-count {
    .unitize(8, 16, margin-left);
    .unitize-padding(2, 7);
    .border-radius(3px);
    background: @brand-secondary;
    color: #fff;
    font-weight: bold;
}

// Product notification
.product--notification {
	.unitize-margin(0, 0, 16, 0);

	.alert {
		.unitize-margin(0, 0, 8, 0);
		word-wrap: break-word;
	}
	.notification--field {
		.border-radius-multi(3px, 0, 0, 3px);
		width: 80%;
	}
	.notification--button {
        .unitize(23, 16, line-height);
        .border-radius-multi(0, 3px, 3px, 0);
		width: 20%;
        text-align: center;

        .icon--mail {
            margin: 0;
        }
	}
}

// Product configurator
.configurator--form {
    .unitize-padding(10, 0);

	.js--fancy-select {
		.unitize-margin(0, 0, 8, 0);
		width: 80%;
	}
}

.configurator--label {
    .unitize-margin(5, 0);
    .unitize(14, 16, font-size);
    font-weight: bold;
}

.is--ctl-detail .content-main--inner {
    background: #fff;
    position: relative;
}

.link--prev-button,
.link--next-button {
    display: none;
}

.base-info--entry {
    .unitize-margin(0, 0, 5, 0);
}

.tab--navigation {
    display: none;
}

.tab--title {
    color: @text-color;
    font-weight: bold;

    &:hover {
        color: @link-color;
    }

    &:after {
        .unitize(10, 16, right);
        .unitize(18, 16, font-size);
        position: absolute;
        top: 50%;
        margin-top: -9px;
        content: "";
        font-family: shopware;
    }
}

.tab-menu--cross-selling {
    .tab--container {
        .unitize-margin(0, 0, 10, 0);
        .border-radius(3px);
        border: 1px solid @panel-border;
        display: block;

        &:last-child {
            .unitize-margin(0, 0);
        }

        &.no--content {
            display: none;
        }
    }

    .tab--header {
        &.is--active {
            border-bottom: 1px solid @panel-border;

            .tab--title:after {
                content: "\e68e";
            }
        }
    }

    .tab--title {
        .unitize-padding(10, 38, 10, 10);
        position: relative;
        display: block;

        &:after {
            content: "\e68f";
        }
    }

    .tab--link {
        display: none;
    }
}

// Smartphone landscape - min-width: 480px
@media screen and (min-width: @phoneLandscapeViewportWidth) {
    .product--details {
        // Product action link
        .action--link {
            .unitize(16, 16, font-size);
            .unitize-margin(0, 35, 5, 0);

            // Icon
            *[class^="icon"] {
                .unitize(14, 16, font-size);
            }

            // Icon
            *[class="icon--star"] {
                .unitize(16, 16, font-size);
            }
        }

        .product--buybox {
            width: 80%;
        }
    }

    .tab-menu--product {
        .unitize-margin(0, 0, 10, 0);

        .tab--navigation {
            display: block;
        }

        .tab--header,
        .tab--preview {
            display: none;
        }
    }
}

@media screen and(min-width: @tabletViewportWidth) {
    .product--details {

        .product--header {
            .unitize-padding(30, 0, 20, 0, 16);

            .product--title {
                .unitize(28, 16, font-size);
                .unitize(30, 16, line-height);
                width: 80%;
                float: left;
                border: 0 none;
            }
        }

        .product--supplier {
            .unitize-height(70);
            width: 20%;
            float: right;

            .product--supplier-link {
                .unitize-height(70);
            }
        }

        // Product review overview
        .product--rating-container {
            width: 80%;
            float: left;
        }

        // Product image
        .product--image-container {
            width: 100%;
        }

        // Product base information
        .product--base-info {
            .entry--label {
                .unitize-margin(0, 8, 0, 0);
            }
        }

        // Tab panel
        .js--desktop-tab-panel {
            .unitize-margin(0, -20, 20, -20);

            .panel--tab-nav {
                .unitize-margin(0, 20);
            }
            .tab--content {
                padding: 0;
				border-left: none;
				border-right: none;
                background: @panel-bg;
            }
        }

        .content--description,
        .content--product-reviews {
            .unitize-padding(30, 30);
        }

        .content--related-products,
        .content--similar-products {
            .unitize-padding(20, 35);
        }

        .product--properties {
            .unitize-margin(0, 0, 20, 0);
        }

        // Block prices
		.block-prices--container {
			.unitize(12, 16, margin-top);
		}

        .tab--navigation {
            display: block;
        }

        .tab--header,
        .tab--preview {
            display: none;
        }

        .review--entry {
            .unitize-padding(30, 30);
        }

        .product--actions {
            padding-bottom: 0;
            border-bottom: 0 none;
        }

        .product--buybox {
            .unitize-margin(0, 0, 30, 0);
            width: 100%;
            border-bottom: 1px solid @border-color;
        }

        .buybox--inner {
            width: 50%;
            float: left;
        }

        .product--base-info {
            .unitize-padding(0, 0, 0, 20);
            margin: 0;
            width: 50%;
            float: left
        }

        .tab--container {
            .unitize-margin(0, 0, 0, 0);
        }

        .tab-menu--product {
            .unitize-margin(0, 0, 30, 0);
        }

        .tab-menu--cross-selling .tab--container {
            display: none;
        }
    }
}
/* ... */

